--- a/mainWindow.html
+++ b/mainWindow.html
@@ -9,7 +9,14 @@
         <div id="intro">
                 <div id="content"><p1>Content</p1></div>
         </div>
-        <div id="leftmenu"><p1>menu</p1></div>
-   
+        <div id="leftmenu">
+            <ul>
+                <li><a class="active" href="#Start">Issue Finder</a></li>
+                <li><a href="#First">System Information</a></li>
+                <li><a href="#Second">Running Processes</a></li>
+                <li><a href="#Third">Anti-Virus</a></li>
+                <li class="last"><a href="#about">About</a></li>
+            </ul>            
+        </div>   
     </body>
 </html>
