--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
         </div>
         <div id="leftmenu">
             <ul>
-                <li><a class="active" href="mainWindow.html">Issue Finder</a></li>
+                <li><a href="mainWindow.html">Issue Finder</a></li>
                 <li><a href="first.html">System Information</a></li>
                 <li><a href="second.html">Running Processes</a></li>
                 <li><a href="third.html">Anti-Virus</a></li>
-                <li class="last"><a href="about.html">About</a></li>
+                <li class="last"><a class="active" href="about.html">About</a></li>
             </ul>            
         </div>   
     </body>
