--- a/first.html
+++ b/first.html
@@ -12,8 +12,8 @@
         </div>
         <div id="leftmenu">
             <ul>
-                <li><a class="active" href="mainWindow.html">Issue Finder</a></li>
-                <li><a href="first.html">System Information</a></li>
+                <li><a href="mainWindow.html">Issue Finder</a></li>
+                <li><a class="active" href="first.html">System Information</a></li>
                 <li><a href="second.html">Running Processes</a></li>
                 <li><a href="third.html">Anti-Virus</a></li>
                 <li class="last"><a href="about.html">About</a></li>
